# vcell-rest/src/main/java/org/vcell/restq/models/AuthCodeResponse.java
@@ -1,0 +1,4 @@
+package org.vcell.restq.models;
+
+public record AuthCodeResponse (String access_token, String id_token, String refresh_token) {
+}
