# vcell-restclient/src/main/java/org/vcell/restclient/model/AuthCodeResponse.java
@@ -1,0 +1,222 @@
+/*
+ * VCell API (development)
+ * VCell API
+ *
+ * The version of the OpenAPI document: 1.0.1
+ * Contact: vcell_support@uchc.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package org.vcell.restclient.model;
+
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.StringJoiner;
+import java.util.Objects;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import java.util.Arrays;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * AuthCodeResponse
+ */
+@JsonPropertyOrder({
+  AuthCodeResponse.JSON_PROPERTY_ACCESS_TOKEN,
+  AuthCodeResponse.JSON_PROPERTY_ID_TOKEN,
+  AuthCodeResponse.JSON_PROPERTY_REFRESH_TOKEN
+})
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class AuthCodeResponse {
+  public static final String JSON_PROPERTY_ACCESS_TOKEN = "access_token";
+  private String accessToken;
+
+  public static final String JSON_PROPERTY_ID_TOKEN = "id_token";
+  private String idToken;
+
+  public static final String JSON_PROPERTY_REFRESH_TOKEN = "refresh_token";
+  private String refreshToken;
+
+  public AuthCodeResponse() { 
+  }
+
+  public AuthCodeResponse accessToken(String accessToken) {
+    this.accessToken = accessToken;
+    return this;
+  }
+
+   /**
+   * Get accessToken
+   * @return accessToken
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_ACCESS_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getAccessToken() {
+    return accessToken;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_ACCESS_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setAccessToken(String accessToken) {
+    this.accessToken = accessToken;
+  }
+
+
+  public AuthCodeResponse idToken(String idToken) {
+    this.idToken = idToken;
+    return this;
+  }
+
+   /**
+   * Get idToken
+   * @return idToken
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_ID_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getIdToken() {
+    return idToken;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_ID_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setIdToken(String idToken) {
+    this.idToken = idToken;
+  }
+
+
+  public AuthCodeResponse refreshToken(String refreshToken) {
+    this.refreshToken = refreshToken;
+    return this;
+  }
+
+   /**
+   * Get refreshToken
+   * @return refreshToken
+  **/
+  @javax.annotation.Nullable
+  @JsonProperty(JSON_PROPERTY_REFRESH_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public String getRefreshToken() {
+    return refreshToken;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_REFRESH_TOKEN)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setRefreshToken(String refreshToken) {
+    this.refreshToken = refreshToken;
+  }
+
+
+  /**
+   * Return true if this AuthCodeResponse object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    AuthCodeResponse authCodeResponse = (AuthCodeResponse) o;
+    return Objects.equals(this.accessToken, authCodeResponse.accessToken) &&
+        Objects.equals(this.idToken, authCodeResponse.idToken) &&
+        Objects.equals(this.refreshToken, authCodeResponse.refreshToken);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(accessToken, idToken, refreshToken);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class AuthCodeResponse {\n");
+    sb.append("    accessToken: ").append(toIndentedString(accessToken)).append("\n");
+    sb.append("    idToken: ").append(toIndentedString(idToken)).append("\n");
+    sb.append("    refreshToken: ").append(toIndentedString(refreshToken)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+  /**
+   * Convert the instance into URL query string.
+   *
+   * @return URL query string
+   */
+  public String toUrlQueryString() {
+    return toUrlQueryString(null);
+  }
+
+  /**
+   * Convert the instance into URL query string.
+   *
+   * @param prefix prefix of the query string
+   * @return URL query string
+   */
+  public String toUrlQueryString(String prefix) {
+    String suffix = "";
+    String containerSuffix = "";
+    String containerPrefix = "";
+    if (prefix == null) {
+      // style=form, explode=true, e.g. /pet?name=cat&type=manx
+      prefix = "";
+    } else {
+      // deepObject style e.g. /pet?id[name]=cat&id[type]=manx
+      prefix = prefix + "[";
+      suffix = "]";
+      containerSuffix = "]";
+      containerPrefix = "[";
+    }
+
+    StringJoiner joiner = new StringJoiner("&");
+
+    // add `access_token` to the URL query string
+    if (getAccessToken() != null) {
+      joiner.add(String.format("%saccess_token%s=%s", prefix, suffix, URLEncoder.encode(String.valueOf(getAccessToken()), StandardCharsets.UTF_8).replaceAll("\\+", "%20")));
+    }
+
+    // add `id_token` to the URL query string
+    if (getIdToken() != null) {
+      joiner.add(String.format("%sid_token%s=%s", prefix, suffix, URLEncoder.encode(String.valueOf(getIdToken()), StandardCharsets.UTF_8).replaceAll("\\+", "%20")));
+    }
+
+    // add `refresh_token` to the URL query string
+    if (getRefreshToken() != null) {
+      joiner.add(String.format("%srefresh_token%s=%s", prefix, suffix, URLEncoder.encode(String.valueOf(getRefreshToken()), StandardCharsets.UTF_8).replaceAll("\\+", "%20")));
+    }
+
+    return joiner.toString();
+  }
+}
+
